--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,3 +59,29 @@ jobs:
         with:
           python-version: 3.9
       - uses: pre-commit/action@v3.0.1
+
+  integration-test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+    needs:
+        - pre-commit
+        - smoke-test
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Integration tests
+        run: |
+            set -e
+
+            echo
+            echo +++ Extract files
+            ./test.sh
